# lxolibs

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
apps/: Makefile.am
apps/app1/: Makefile.am  main.c
apps/app2/: Makefile.am  main.c
apps/core/: .gitignore  Makefile.am  core.c  core.h  main.c
apps/core/include/: core.h  log.h  sensor.h
apps/core/organ/: README.md
apps/core/organ/heart/: heart.c  heart.h
apps/core/organ/kidney/: kidney.c  kidney.h
apps/core/organ/large_intestine/: large_intestine.c  large_intestine.h
apps/core/src/: core.c  main.c  sensor.c  test.c
apps/core/src/sensor/: sensor_touch.c
apps/core/system/: README.md
apps/core/system/sensory/: sensor.c  sensor.h  sensor_touch.c
apps/core/tests/: Makefile.am  test_cell.c
apps/core/tissue/: README.md
apps/core/tissue/connective/: connective.c  connective.h
apps/core/tissue/nervious/: cell.c  cell.h  nervious.c  nervious.h  neuron.h
apps/freertos-demo/: .gitignore  Makefile.am
apps/freertos-demo/demo0/: Makefile.am  main.c  use_sdl2_show_v4l2.h
apps/freertos-demo/demo0/vi/: use_sdl2_show_v4l2.c  vi.c  vi.h
apps/freertos-demo/sipeed_808/: Makefile.am  demo0  main.c  sipeed_808
apps/freertos-demo/sipeed_808/aiao/: aiao.c  aiao.h  aiao_normal.c  aiao_normal.h
apps/freertos-demo/sipeed_808/ao/: ao.c  ao.h  ao_normal.c  ao_normal.h
apps/freertos-demo/sipeed_808/db/: db.c  db.h  facedb.c
apps/freertos-demo/sipeed_808/flow/: flow.c  flow.h  flow_normal.c  flow_normal.h
apps/freertos-demo/sipeed_808/mo/: mo.c  mo.h
apps/freertos-demo/sipeed_808/pjsip/: pjsip.c  pjsip.h
apps/freertos-demo/sipeed_808/uartp/: uart_protocol_test.c
apps/freertos-demo/sipeed_808/uartp/inc/: mf_uartp.h  mf_uartp_bin.h
apps/freertos-demo/sipeed_808/uartp/src/: linux_uart.c  mf_uartp.c  mf_uartp_bin.c
apps/freertos-demo/sipeed_808/vi/: use_sdl2_show_v4l2.c  vi.c  vi.h  vi_dual_cam.c  vi_dual_cam.h
apps/freertos-demo/sipeed_808/vivo/: use_sdl2_show_v4l2.c  vivo.c  vivo.h  vivo_dual_cam.c  vivo_dual_cam.h
apps/template/: .gitignore  Makefile.am
apps/template/include/: hello.h  main.h
apps/template/src/: hello1.c  hello2.c  hello3.c  main.c
assets/: full.yuv
common/: err.h  utils.h
libs/bash/: get_filename.sh
libs/common/: Makefile.am  common.h  err.h  log.h  utils.c
libs/db/: .gitignore  Makefile.am
libs/db/inc/: db.h  facedb.h
libs/db/src/: db.c  facedb.c
libs/db/test/: Makefile.am  test.c
libs/kalman/: Makefile.am
libs/kalman/inc/: kalman.h
libs/kalman/lib/: Makefile.am
libs/kalman/src/: kalman.c
libs/kalman/test/: Makefile.am  kalman_test  kalman_test.c
libs/lib_a/src/: Makefile.am  lib_a.c
libs/lib_b/inc/: lib_b.h
libs/lib_b/src/: Makefile.am  lib_b.c
libs/lib_c/inc/: lib_c.h
libs/lib_c/src/: Makefile.am  lib_c.c
libs/libfatfs/: .gitignore
libs/libfatfs/source/: Makefile.am  diskio.c  diskio.h  ff.c  ffconf.h  test.c
libs/liblinuxapi/: .gitignore  readmd.md  readme.md
libs/liblinuxapi/inc/: liblinuxapi.h
libs/liblinuxapi/src/: Makefile.am  apue.h  liblinuxapi  liblinuxapi.c  test.c
libs/m4/: test_m4.m4
libs/tests/: .gitignore  Makefile.am  test_freertos.c  test_v4l2.c
libs/uart_protocol/: Makefile.am
libs/uart_protocol/inc/: mf_err.h  mf_log.h  mf_uartp.h  mf_uartp_bin.h
libs/uart_protocol/src/: linux_uart.c  mf_uartp.c  mf_uartp_bin.c
libs/uart_protocol/test/: Makefile.am  uart_protocol_test  uart_protocol_test.c
libs/uartp/: .gitignore  Makefile.am
libs/uartp/inc/: mf_uartp.h  mf_uartp_bin.h
libs/uartp/src/: linux_uart.c  mf_uartp.c  mf_uartp_bin.c
