#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([lxolibs], [0.0.1], [lxowalle@outlook.com])
AC_CONFIG_SRCDIR([apps/app1/main.c])

# AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([gnu subdir-objects])
# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 apps/app1/Makefile
                 apps/core/Makefile
                 apps/template/Makefile
                 libs/kalman/Makefile
                 libs/kalman/lib/Makefile
                 libs/kalman/test/Makefile
                 libs/common/Makefile
                 libs/libfatfs/source/Makefile
                 libs/liblinuxapi/src/Makefile
                 libs/uart_protocol/Makefile
                 libs/uart_protocol/test/Makefile])
AC_OUTPUT
