#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([lxolibs], [0.0.1], [lxowalle@outlook.com])
# AC_CONFIG_SRCDIR([apps/app1/main.c])

# AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([gnu subdir-objects])
# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 apps/Makefile
                 apps/app1/Makefile
                 apps/core/Makefile
                 apps/freertos-demo/Makefile
                 apps/freertos-demo/sipeed_808/Makefile
                 apps/template/Makefile
                 common/Makefile
                 libs/db/Makefile
                 libs/db/test/Makefile
                 libs/kalman/Makefile
                 libs/kalman/lib/Makefile
                 libs/kalman/test/Makefile
                 libs/libfatfs/source/Makefile
                 libs/liblinuxapi/src/Makefile
                 libs/tests/Makefile
                 third_party/FreeRTOS-Kernel/Makefile])
# AC_CONFIG_SUBDIRS([third_party/SDL
#                    third_party/pjproject])
AC_OUTPUT
