# noinst_PROGRAMS= lib_b           #生成的目标 
noinst_LIBRARIES= lib_b.a                  #   编译为库文件(不安装)
lib_b_a_SOURCES= lib_b.c           #生成目标依赖的源      

# lib_b_a_LDADD=                     #可能需要加载的其他的目标
# lib_b_a_LDFLAGS=                   #加载目标需要的配置参数
# lib_b_LIBADD=                    #可能需要加载的其他的库
