noinst_PROGRAMS= liblinuxapi           #生成的目标 
   
liblinuxapi_SOURCES= liblinuxapi.c test.c           #生成目标依赖的源      
noinst_HEADERS = ../inc/liblinuxapi.h
liblinuxapi_CPPFLAGS = -I../inc
# liba_a_LDADD=                     #可能需要加载的其他的目标
# liba_a_LDFLAGS=                   #加载目标需要的配置参数
# lib_a_LIBADD=                    #可能需要加载的其他的库